--- a/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/index.html
+++ b/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/index.html
@@ -95,8 +95,11 @@
 
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
     </fb:login-button>
-
+    
     <div id="status">
     </div>
+
+    </br>
+    <button><a href="DeezerConnection.html"> Connexion Deezer</a></button>
 </body>
 </html>
