--- a/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/index.html
+++ b/Omega/ITI.S4.PI.Omega/ITI.S4.PI.Omega/index.html
@@ -4,129 +4,166 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <meta charset="utf-8" />
+    <script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+    <script src="https://e-cdns-files.dzcdn.net/js/min/dz.js"></script>
 </head>
 <body>
 
-    <!--FaceBook Connection-->
+    <!-- Initializing SDK -->
     <script>
-  // This is called with the results from from FB.getLoginStatus().
-  function statusChangeCallback(response) {
-    console.log('statusChangeCallback');
-    console.log(response);
-    // The response object is returned with a status field that lets the
-    // app know the current login status of the person.
-    // Full docs on the response object can be found in the documentation
-    // for FB.getLoginStatus().
-    if (response.status === 'connected') {
-      // Logged into your app and Facebook.
-      testAPI();
-    } else if (response.status === 'not_authorized') {
-      // The person is logged into Facebook, but not your app.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into this app.';
-    } else {
-      // The person is not logged into Facebook, so we're not sure if
-      // they are logged into this app or not.
-      document.getElementById('status').innerHTML = 'Please log ' +
-        'into Facebook.';
-    }
-  }
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '263290184003311',
+                xfbml: true,
+                version: 'v2.5'
+            });
+        };
 
-  // This function is called when someone finishes with the Login
-  // Button.  See the onlogin handler attached to it in the sample
-  // code below.
-  function checkLoginState() {
-    FB.getLoginStatus(function(response) {
-      statusChangeCallback(response);
-    });
-  }
-
-  window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '263290184003311',
-    cookie     : true,  // enable cookies to allow the server to access
-                        // the session
-    xfbml      : true,  // parse social plugins on this page
-    version    : 'v2.5' // use graph api version 2.5
-  });
-
-  // Now that we've initialized the JavaScript SDK, we call
-  // FB.getLoginStatus().  This function gets the state of the
-  // person visiting this page and can return one of three states to
-  // the callback you provide.  They can be:
-  //
-  // 1. Logged into your app ('connected')
-  // 2. Logged into Facebook, but not your app ('not_authorized')
-  // 3. Not logged into Facebook and can't tell if they are logged into
-  //    your app or not.
-  //
-  // These three cases are handled in the callback function.
-
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-  });
-
-  };
-
-  // Load the SDK asynchronously
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-
-  // Here we run a very simple test of the Graph API after login is
-  // successful.  See statusChangeCallback() for when this call is made.
-  function testAPI() {
-    console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
-      document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
-    });
-  }
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) { return; }
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    <!--
-      Below we include the Login Button social plugin. This button uses
-      the JavaScript SDK to present a graphical Login button that triggers
-      the FB.login() function when clicked.
-    -->
+    <!--FaceBook Connection-->
+    <script>
+        function statusChangeCallback(response) {
+            console.log('statusChangeCallback');
+            console.log(response);
+            if (response.status === 'connected') {
+                testAPI();
+            } else if (response.status === 'not_authorized') {
+                document.getElementById('status').innerHTML = 'Please log ' +
+                  'into this app.';
+            } else {
+                document.getElementById('status').innerHTML = 'Please log ' +
+                  'into Facebook.';
+            }
+        }
+
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+        }
+
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '263290184003311',
+                cookie: true,
+                xfbml: true,
+                version: 'v2.5'
+            });
+
+
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+
+        function testAPI() {
+            console.log('Welcome!  Fetching your information.... ');
+            FB.api('/me', function (response) {
+                console.log('Successful login for: ' + response.name);
+                document.getElementById('status').innerHTML =
+                  'Thanks for logging in, ' + response.name + '!';
+            });
+        }
+    </script>
+
+
+    <!--Deezer Connection-->
+    <br />
+    <div id="dz-root"></div>
+    <script>
+        function dzConnection() {
+            DZ.init({
+                appId: '176241',
+                channelUrl: 'http://localhost:4014/index.html'
+            });
+
+            DZ.login(function (response) {
+                if (response.authResponse) {
+                    DZ.api('/user/me', function (response) {
+                        alert('Good to see you, ' + response.name + '.');
+                    });
+                } else {
+                    alert('User cancelled login or did not fully authorize.');
+                }
+            }, { perms: 'basic_access,email' });
+        }
+    </script>
 
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
     </fb:login-button>
-    
+    <button onclick="dzConnection()">Deezer Connection</button><br />
+    <button onclick="getInfo()">Get infos</button>
+    <button onclick="getEvents()">Get events</button>
+    <button onclick="getGroups()">Get groups</button>
+
     <div id="status">
     </div>
-
-  <!--Deezer Connection-->
-    <br />
-    <button onclick="dzConnection()">Deezer Connection</button>
-
-    <script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
-    <script src="https://e-cdns-files.dzcdn.net/js/min/dz.js"></script>
-
-    <div id="dz-root"></div>
+    <div id="test">
+    </div>
 
     <script>
-    function dzConnection(){
-	DZ.init({
-		appId  : '176241',
-		channelUrl: 'http://localhost:4014/index.html'
-	});
+        //Fonction pour recuperer une info sur un user
+        function getInfo() {
+            FB.api('/me', 'GET', { fields: 'name' }, function (response) {
+                document.getElementById('status').innerHTML = response.name;
+            });
+        }
 
-DZ.login(function (response) {
-    if (response.authResponse) {
-        DZ.api('/user/me', function (response) {
-            alert('Good to see you, ' + response.name + '.');
-        });
-    } else {
-        alert('User cancelled login or did not fully authorize.');
-    }
-}, { perms: 'basic_access,email' });
-    }
+        Object.size = function (obj) {
+            var size = 0, key;
+            for (key in obj) {
+                if (obj.hasOwnProperty(key)) size++;
+            }
+            return size;
+        };
+
+
+        function getEvents() {
+            var eventList = [];
+            FB.api('/me/events', function (response) {
+                var size = Object.size(response.data);
+                for (i = 0; i < size; i++) {
+                    eventList.push(response.data[i].name);
+                    //document.getElementById('status').innerHTML = response.data[i].name;
+                }
+
+                document.getElementById('status').innerHTML = eventList.join()+"<br>";
+                document.getElementById('test').innerHTML = size;
+                
+            });
+        }
+
+        function getGroups() {
+            var groupList = [];
+            FB.api('/me/groups', function (response) {
+                var size = Object.size(response.data);
+                for (i = 0; i < size; i++) {
+                    groupList.push(response.data[i].name);
+                    //document.getElementById('status').innerHTML = response.data[i].name;
+                }
+
+                document.getElementById('status').innerHTML = groupList.join() + "<br>";
+                document.getElementById('test').innerHTML = size;
+
+            });
+        }
     </script>
 
 
